--- a/style.css
+++ b/style.css
@@ -10,6 +10,16 @@ section.intro {
   width: 100%;
   padding: 0;
 }
+.desc a:link {
+  color: white;
+}
+.desc a:hover {
+  color: white;
+}
+.desc a:visited {
+  color: turquoise;
+}
+
 .intro-text {
   text-align: center;
   margin-left: 0%;
@@ -49,7 +59,7 @@ section.intro p.desc {
 /* canvas section */
 section.canvas {
   width: 100%;
-  min-height: 1080px;
+  height: 1200px;
   margin: 0 auto 0 auto;
   padding: 0;
   background-color:black;
@@ -57,24 +67,22 @@ section.canvas {
 }
 .plot {
   width: 100%;
-  min-width: 1080px;
-  min-height: 960px;
+  /* min-width: 1080px; */
+  /* min-height: 960px; */
   margin-top: 20px;
   margin-left: 0;
   padding: 0;
-  position: absolute;
+  position: relative;
   background-color:black;
 }
 .viewof-keyframe {
   color: white;
 }
-#bar_animation {
-  color: white;
-}
 #bar {
-  margin-left: 0;
-  padding: 0;
-  width: 600px;
+  margin-left: 400px;
+  /* padding: 0; */
+  /* width: 600px; */
+  fill: white;
 }
 #child_div_1 {
   width: 10%;
@@ -185,19 +193,24 @@ section.canvas p.desc {
 /* graph-setting */
 .graph {
   /* text-align: center; */
+  /* margin-left: 400px; */
+  /* width: 1080px; */
 }
 svg {
-  flex-basis: 100%;
-  min-width: 1080px;
-  min-height: 800px;
-  /* z-index: 1; */
+  /* flex-basis: 100%; */
+  /* width: 1640px; */
+  /* height: 1000px; */
+  /* margin-left: 300px; */
+  /* float: right; */
+  z-index: 1;
   position: absolute;
 }
 .navigation {
+  float: left;
   width: 320px;
   height: 200px;
-  position: relative;
-  margin-left: 5%;
+  position: absolute;
+  margin-left: 2%;
   padding: 5px;
   z-index: 9;
   background-color:rgba(255, 255, 255, 0.2);
@@ -211,9 +224,9 @@ svg {
   font-size:15px;
 }
 .sticky {
-  position: fixed;
+  position: float;
   top: 0;
-  /* padding-top: 102px; */
+  /* padding-top: 500px; */
 }
 .buttons_navigation {
   margin-left: 5%;
@@ -239,26 +252,44 @@ svg {
   font-size: 12px;
   color:black;
 }
-/* animated bar graph */
-.viewof-keyframe {
-  margin-left:12.5%;
+
+/* dropdown */
+.dropdown_box {
+  float: left;
+  width: 320px;
+  height: 200px;
+  margin-left: 2%;
+  /* margin-top: 50px; */
+  padding: 5px;
+  z-index: 9;
+  /* background-color:rgba(255, 255, 255, 0.2); */
+  clear: both;
+  /* position:sticky; */
+  position: absolute;
+  top: 650px;
 }
-#bar_animation {
-  width: 75%;
-  margin:0 auto 10% auto;
+#networks {
+  margin-left: 5%;
+  margin-top: 5%;
   font-family: "Roboto Regular";
   font-size:12px;
-  color:black;
+  width: 100px;
+  height: 35px;
+  border-radius: 5px;
+  /* position:sticky; */
 }
-#bar_animation text {
+
+/* animated bar graph */
+
+#bar {
+  /* height:640px; */
+  /* width: 80%; */
+  /* position: relative; */
+  /* float: left; */
+  /* max-width: 800px; */
+  /* margin-left: 400px; */
   font-family: "Roboto Regular";
-  font-size:14px;
-  color:black;
-}
-#bar_animation form {
-  font-family: "Roboto Regular";
-  font-size:10px;
-  color:black;
+  font-size:12px;
 }
 /* .aligncenter {
     text-align: center;
@@ -367,8 +398,9 @@ section.article p {
   font-size:18px;
   color: white;
   line-height: 1.2em;
-  text-align: left;		
-  margin-top: 50px;
+  text-align: left;	
+  margin-left: 5%;	
+  margin-top: 10px;
   border: 0px;		
   border-radius: 5px;			
   pointer-events: none;	
@@ -406,7 +438,7 @@ section.article p {
     display: inline-block;
     position: relative;
     width: 100%;
-    padding-bottom: 100%;
+    /* padding-bottom: 100%; */
     /* aspect ratio */
     vertical-align: top;
     overflow: hidden;
@@ -425,6 +457,9 @@ section.article p {
   font-size: 16px;
   fill: white;
   margin-top: 50px;
+}
+#post_link {
+  cursor: pointer;
 }
   
 
