--- a/style.css
+++ b/style.css
@@ -258,15 +258,54 @@ svg {
   float: left;
   width: 320px;
   height: 200px;
-  margin-left: 2%;
-  /* margin-top: 50px; */
-  padding: 5px;
+  margin-left: 0.5%;
+  margin-top: 50px;
   z-index: 9;
-  /* background-color:rgba(255, 255, 255, 0.2); */
   clear: both;
   /* position:sticky; */
   position: absolute;
   top: 650px;
+}
+.tooltip_holder {
+  z-index: 9;
+  background-color:rgba(255, 255, 255, 0.2);
+  width: 320px;
+  height: auto;
+  position: absolute;
+  color: white;
+  margin-left: 5%;
+  margin-top: 20px;
+  padding: 0;
+}
+.up_votes{
+  /* position: absolute;				 */
+  width: 250px;	
+  height: 50px;
+  font-family:"Roboto Regular";
+  font-size:14px;
+  color: white;
+  margin-left: 5%;
+  margin-top: 20px;
+  margin-bottom: 0;
+  padding: 0;
+}
+#tooltip {
+  /* position: absolute;				 */
+  width: 280px;	
+  /* height: auto; */
+  /* background-color:red;							 */			
+  font-family:"Roboto Light-Italic";
+  font-size:15px;
+  color: white;
+  line-height: 1.5em;
+  text-align: left;	
+  margin-left: 5%;	
+  margin-top: 20px;
+  padding: 0;
+  border: 0px;		
+  border-radius: 5px;			
+  pointer-events: none;	
+  z-index: 2;
 }
 #networks {
   margin-left: 5%;
@@ -279,8 +318,8 @@ svg {
   /* position:sticky; */
 }
 
-/* animated bar graph */
 
+/* animated bar graph */
 #bar {
   /* height:640px; */
   /* width: 80%; */
@@ -387,24 +426,6 @@ section.article p {
 }
 .img-container{
     margin-top:20px;
-}
-#tooltip {
-  position: absolute;				
-  width: 250px;	
-  height: auto;
-  /* background-color:red;							 */
-  padding: 2px;				
-  font-family:"Baskerville Italic";
-  font-size:18px;
-  color: white;
-  line-height: 1.2em;
-  text-align: left;	
-  margin-left: 5%;	
-  margin-top: 10px;
-  border: 0px;		
-  border-radius: 5px;			
-  pointer-events: none;	
-  z-index: 2;
 }
 /* network */
 .links line {
